loki/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: loki-ingress
  annotations:
    nginx.ingress.kubernetes.io/proxy-buffer-size: "128k"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
      - log.logging.me
      secretName: auth-tls-secret-loki
  rules:
    - host: log.loki.me
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: loki-grafana
                port:
                  number: 80
